# fl-suite

./: .editorconfig  .eslintrc  .gitignore  .gitmodules  .prettierrc  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  commitlint.config.js  compose.yaml  go.work  go.work.sum  package.json  release.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  targets.mk
.github/workflows/: main.yaml
.release/: env.js  package.json  publish.js
.release/src/: kustomize.js  kustomize.test.js
components/centraldashboard/: .gitignore  Dockerfile  Makefile  README.md  angular.json  karma.conf.js  kustomization.tpl.yaml  nginx.conf  package.json  proxy.conf.json
components/edge-identity/: .gitignore  Dockerfile  Makefile  README.md
components/edge-identity/backend/: entrypoint.py  pyproject.toml
components/edge-identity/backend/apps/default/: __init__.py  db.py  schema.sql
components/edge-identity/backend/apps/default/routes/: delete.py  get.py  post.py
components/edge-identity/backend/spire/api/server/agent/v1/: agent_pb2.py  agent_pb2_grpc.py
components/edge-identity/backend/spire/api/server/entry/v1/: entry_pb2.py  entry_pb2_grpc.py
components/edge-identity/backend/spire/api/types/: agent_pb2.py  attestation_pb2.py  bundle_pb2.py  entry_pb2.py  federateswith_pb2.py  federationrelationship_pb2.py  jointoken_pb2.py  jwtsvid_pb2.py  selector_pb2.py  spiffeid_pb2.py  status_pb2.py  x509svid_pb2.py
components/fl-operator/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  kustomization.yaml.tpl  main.go  tools.go
components/fl-orchestrator/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  tools.go  (+1 more)
components/kubeflow-pipeline/pipeline_components/analytics-client/: Dockerfile  Makefile  pyproject.toml  requirements.txt
components/kubeflow-pipeline/pipeline_components/analytics-client/flwr_analytics_client/: __main__.py  client.py  correlation.py  data.py  fedbox.py  fedhist.py  provider.py
components/kubeflow-pipeline/pipeline_components/analytics-client/tests/: test_correlation.py  test_fedhist.py
components/kubeflow-pipeline/pipeline_components/analytics-server/: Dockerfile  Makefile  pyproject.toml  requirements.txt
components/kubeflow-pipeline/pipeline_components/analytics-server/flwr_analytics_server/: __main__.py  correlation.py  fedbox.py  fedhist.py  fivenum.py  provider.py  server.py
components/kubeflow-pipeline/pipeline_components/analytics-server/tests/: test_correlation.py  test_fedbox.py  test_fedhist.py
components/kubeflow-pipeline/python/: Makefile  README.md  pyproject.toml
components/kubeflow-pipeline/python/fl_suite/: __init__.py  _version.tpl  context.py
components/kubeflow-pipeline/python/fl_suite/analytics/: __init__.py  _analytics.py  _boxplot.py  _correlation.py  _histogram.py
components/kubeflow-pipeline/python/fl_suite/pipelines/: __init__.py  _build_image.py  _contants.py  _fl_client.py  _flower_infrastructure.py  _flower_server.py  _ml_model.py  _pipelines.py  _prepare_context.py  _setup_context.py
components/kubeflow-pipeline/python/tests/: conftest.py  test_context.py  test_pipelines.py  test_version.py
develop/: .gitignore  Makefile  README.md  kind-config.yaml  provision.sh  teardown.sh
docs/: .gitignore  README.md  init-edge.sh  installation-guide-edge.md  installation-guide.md  local-edge-kubeconfig.yaml  quickstart.md  teardown-edge.sh  uniwear-example.md
(+244 files in other folders)
