[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fl_suite"
version = "0.0.0+dev.9f3ccf6"
description = "Katulu FL Suite Tools"
authors = ["Katulu <eng@katulu.io>"]
homepage = "https://katulu.io"
readme = "README.md"
packages = [
    { include = "fl_suite" }
]
# Explicitly included as 'poetry' will exclude files in '.gitignore' by default
include = [
    "fl_suite/_version.py"
]
exclude = [
    "fl_suite/_version.tpl"
]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "^1.8.12"
kubernetes = ">=8.0.0,<19"
minio = "^7.1.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
semver = "^2.13.0"
flake8 = "^4.0.1"
Flake8-pyproject = "^0.9.0"
flake8-isort = "^4.1.1"
flake8-black = "^0.3.2"

[tool.flake8]
max-line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-module-docstring,duplicate-code"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]
